dawarich/network-policy-dawarich-allow-ingress-intra-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dawarich-allow-ingress-intra-namespace
  namespace: dawarich
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - dawarich
          - photon
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dawarich
